--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,22 @@ services:
       - ./app:/app
     command: 
         ["sh", "-c", "python manage.py runserver 0.0.0.0:0000"]
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=devuser
+      - DB_HOST=db
+    depends_on:
+      - db
+
+  db:
+    image: postgres:12
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=devuser
+
+volumes:
+  dev-db-data:
